--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,54 +48,160 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func, inspect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can view all of the classes that automap found\n",
+    "Base = automap_base()\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "Base.classes.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reflect an existing database into a new model\n",
+    "inspector = inspect(engine)\n",
     "\n",
-    "# reflect the tables"
+    "# reflect the tables\n",
+    "inspector.get_table_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id INTEGER\n",
+      "station TEXT\n",
+      "date TEXT\n",
+      "prcp FLOAT\n",
+      "tobs FLOAT\n"
+     ]
+    }
+   ],
    "source": [
-    "# We can view all of the classes that automap found\n"
+    "# Get a list of column names and types\n",
+    "columns = inspector.get_columns('measurement')\n",
+    "for c in columns:\n",
+    "    print(c['name'], c[\"type\"])\n",
+    "# columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'USC00519397', '2010-01-01', 0.08, 65.0),\n",
+       " (2, 'USC00519397', '2010-01-02', 0.0, 63.0),\n",
+       " (3, 'USC00519397', '2010-01-03', 0.0, 74.0),\n",
+       " (4, 'USC00519397', '2010-01-04', 0.0, 76.0),\n",
+       " (5, 'USC00519397', '2010-01-06', None, 73.0)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Save references to each table\n"
+    "engine.execute('SELECT * FROM measurement LIMIT 5').fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sqlalchemy.ext.automap.station'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Save references to each table\n",
+    "\n",
+    "measurement = Base.classes.measurement\n",
+    "station =Base.classes.station\n",
+    "print(station)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<sqlalchemy.ext.automap.measurement object at 0x0000027E3DEDF8E0>, 0.08)\n",
+      "(<sqlalchemy.ext.automap.measurement object at 0x0000027E3DEDF820>, 0.0)\n",
+      "(<sqlalchemy.ext.automap.measurement object at 0x0000027E3DEDF790>, 0.0)\n",
+      "(<sqlalchemy.ext.automap.measurement object at 0x0000027E3DEDF730>, 0.0)\n",
+      "(<sqlalchemy.ext.automap.measurement object at 0x0000027E3DEDF6D0>, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create our session (link) from Python to the DB\n",
+    "\n",
+    "# Create a session\n",
+    "session = Session(engine)\n",
+    "# Use the session to query Demographics table and display the first 5 salaries\n",
+    "for row in session.query(measurement, measurement.prcp).limit(5).all():\n",
+    "    print(row)"
    ]
   },
   {
@@ -306,7 +412,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('bootcamp')",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.4"
   },
   "nteract": {
    "version": "0.12.3"
@@ -353,6 +459,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9abb041905d78b0e8d42a8ca89e8df410324f3397d57804e78a833def6a13175"
+   }
   }
  },
  "nbformat": 4,
