--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -134,6 +134,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id INTEGER\n",
+      "station TEXT\n",
+      "name TEXT\n",
+      "latitude FLOAT\n",
+      "longitude FLOAT\n",
+      "elevation FLOAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a list of column names and types\n",
+    "columns = inspector.get_columns('station')\n",
+    "for c in columns:\n",
+    "    print(c['name'], c[\"type\"])\n",
+    "# columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -199,7 +225,7 @@
     "\n",
     "# Create a session\n",
     "session = Session(engine)\n",
-    "# Use the session to query Demographics table and display the first 5 salaries\n",
+    "# Use the session to query measurement table and display the first 5 precipitation\n",
     "for row in session.query(measurement, measurement.prcp).limit(5).all():\n",
     "    print(row)"
    ]
@@ -218,6 +244,8 @@
    "outputs": [],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
+    "\n",
+    "\n",
     "\n",
     "# Calculate the date 1 year ago from the last data point in the database\n",
     "\n",
